# comments-scraping-and-analysis

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup_env.sh
notebooks/: 01_demo_tfidf_local_video.ipynb  02_demo_tfidf_global_corpus.ipynb  03_demo_channel_and_distinctive_kws.ipynb
src/yt_comments/: __main__.py
src/yt_comments/analysis/: features.py  (+1 more)
tests/: test_basic_stats_integration.py  test_basic_stats_repository.py  test_basic_stats_service.py  test_cli.py  test_comments_repository.py  test_gold_tfidf_keywords_parquet_repository.py  test_scrape_service.py  test_tfidf_service.py
tests/analysis/: test_features_normalize_letters.py  test_features_normalize_token.py  test_features_repeating_pair_token.py
tests/cli/: test_cli.py  test_cli_corpus.py  test_cli_discover_videos.py  test_cli_distinctive_keywords.py  test_cli_report_channel.py  test_cli_scrape_channel.py  test_cli_stats_channel.py  test_cli_tfidf.py  test_cli_tfidf_channel.py  test_cli_tfidf_ngrams.py  test_cli_tfidf_with_corpus.py
tests/ingestion/: test_channel_ref_parser.py  test_channel_video_discovery_service.py  test_scrape_service.py  test_video_id_extractor.py  test_youtube_api_client.py
tests/preprocessing/: test_preprocessing_service.py
tests/storage/: test_gold_channel_ref_mapping_repository.py  test_gold_channel_run_summary_repository.py  test_gold_channel_tfidf_repository.py  test_gold_channel_token_stats_repository.py  test_gold_corpus_df_parquet_repository.py  test_gold_distinctive_keywords_repository.py  test_gold_tfidf_keywords_parquet_repository.py
(+67 files in other folders)
