[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-comments-analysis"
version = "1.0.0"
description = "YouTube comments scraping and classical NLP analysis"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=14,<20",
    "nltk>=3.8,<4",
    "python-dotenv>=1,<2",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "ruff>=0.3,<1",
  "black>=24,<26",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"